# trend-opportunity

./: .env.example  .gitignore  AGENTS.md  HANDOFF.md  README.md  pyproject.toml
app/: __init__.py  amazon.py  amazon_validation.py  analysis.py  cli.py  clustering.py  config.py  db.py  deduplication.py  event_research.py  evidence.py  evidence_bundle.py  evidence_collectors.py  evidence_quality.py  evidence_types.py  feishu.py  main.py  market_evidence.py  market_validation.py  news_search.py  opportunity_assessment.py  opportunity_signals.py  pipeline.py  product_hypotheses.py  reports.py  research.py  research_candidates.py  research_screening.py  research_tools.py  risk.py  scoring.py  semantic.py  semantic_duplicates.py  sources.py
app/static/: app.css
app/templates/: base.html  dashboard.html  event.html  feedback.html  hypotheses.html  recommendations.html  research_queue.html  semantic_review.html  signals.html  validation.html  workbench_item.html  workbench_queue.html
docs/: amazon-first-party-validation.md  architecture.md  overseas-source-research.md  product-boundary-and-architecture.md  research-agent-architecture.md  research-agent-implementation-plan.md  workflow-contract.md
docs/archive/: overseas-source-research.md  research-agent-architecture.md  research-agent-implementation-plan.md
skills/trend-opportunity-research/: SKILL.md
skills/trend-opportunity-research/agents/: openai.yaml
skills/trend-opportunity-research/references/: abstention-rules.md  evidence-quality.md  (+1 more)
tests/: test_core.py  test_live_sources.py  test_workbench_ui.py
(+1 files in other folders)
