[project]
name = "trend-opportunity-demo"
version = "0.1.0"
description = "Real-data trend news product opportunity assistant demo"
requires-python = ">=3.12"
dependencies = [
  "asyncpraw>=8.0,<9",
  "beautifulsoup4>=4.14,<5",
  "fastapi>=0.135,<1",
  "googlenewsdecoder>=0.1.7,<1",
  "httpx>=0.28,<1",
  "jinja2>=3.1,<4",
  "openai>=2.15,<3",
  "pydantic>=2.12,<3",
  "tldextract>=5.3,<6",
  "trafilatura>=2.1,<3",
  "tzdata>=2025.2; sys_platform == 'win32'",
  "uvicorn>=0.41,<1",
]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "docs*", "tests*"]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
]
ml = [
  "sentence-transformers>=3,<6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["live: tests that access real external services"]
